Record what the template build actually verified, with the build's own output
The verification report gains an entry for step 38 stating the real numbers
rather than that the tests pass: Temurin 25.0.3, Maven 3.9.16, "release 25" in
javac's own line, 13 tests run and zero skipped, BUILD SUCCESS. Zero skipped
matters as much as zero failures - a container test that skipped without Docker
would make this gate decoration.

It records what each test actually proves rather than that a stack "supports"
Java 25: Hibernate building an EntityManagerFactory drives ByteBuddy; a final
class is mocked because an interface would pass with the instrumentation agent
completely broken; NUMERIC(12,2) rejects 10000000000.00 where a COBOL MOVE would
silently drop the leading digit.

Also records the two defects this work found - Spring Boot 4 removing
spring.batch.jdbc.*, and XML forbidding a double hyphen inside a comment - and
adds an honest gap that the green build could otherwise obscure: the template
contains one arithmetic helper and an application class. No line of Java has
been generated from COBOL yet.

Python suite is 386 tests / 99.06% after the six new invariant tests; README
updated to match, including that mvn verify needs JDK 25 and Docker.